<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.coco.demoapp.Activities.MainActivity">


    <RelativeLayout
        android:id="@+id/loginScreenRelativeLAy"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:onClick="hideKeyboard"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="16dp"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_alignBottom="@+id/cboxPick"
            android:layout_alignLeft="@+id/txtUserName"
            android:layout_alignStart="@+id/txtUserName"
            android:layout_marginBottom="@dimen/txtPwdMarginBtm"
            android:ems="10"
            android:hint="Password"
            android:inputType="textPassword"
            tools:layout_editor_absoluteX="85dp"
            tools:layout_editor_absoluteY="188dp" />

        <EditText
            android:id="@+id/txtUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="@dimen/txtUsrMarginLeft"
            android:layout_marginStart="@dimen/txtUsrMarginStart"
            android:layout_marginTop="@dimen/txtUsrMarginTop"
            android:ems="10"
            android:hint="Username"
            android:inputType="textPersonName"
            android:selectAllOnFocus="false"
            tools:layout_editor_absoluteX="85dp"
            tools:layout_editor_absoluteY="113dp" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="47dp"
            android:onClick="login"
            android:text="@string/btnLogin"
            tools:layout_editor_absoluteX="148dp"
            tools:layout_editor_absoluteY="348dp" />

        <CheckBox
            android:id="@+id/cboxPick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_above="@+id/btnLogin"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="77dp"
            android:onClick="peekPassword"
            android:text="@string/cboxPeek"
            tools:layout_editor_absoluteX="128dp"
            tools:layout_editor_absoluteY="265dp" />

        <TextView
            android:id="@+id/txtAlert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/txtUserName"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/txtUserName"
            android:layout_marginLeft="44dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="82dp"
            android:text="TextView" />

        <CheckBox
            android:id="@+id/cboxRemember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/cboxPick"
            android:layout_alignStart="@+id/cboxPick"
            android:layout_below="@+id/txtPassword"
            android:onClick="rememberClick"
            android:text="@string/cboxRemember" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
