<resources>
    <string name="app_name">demoapp</string>
    <string name="cboxPeek">Peek password</string>
    <string name="btnLogin">Login!</string>
    <string name="cboxRemember">Remember me</string>
    <string name="btnActive">Active</string>
    <string name="btnFinished">Finished</string>
    <string name="btnNoPM">Finished NoPM</string>
    <string name="tvChildText">Child</string>
    <string name="LoginScreenRelLayout">relativeLayLoginScreen</string>
    <string-array name="sort_options">
        <item>By ID</item>
        <item>By Plate</item>
        <item>By State</item>
        <item>By Value</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empty_fields">There are empty fields!</string>
    <string name="invalid_credentials">Invalid username and/or password.</string>
</resources>
